| Bug #9526 | ENUM storage wrong; Got signal 11 when trying to create an InnoDB table | ||
|---|---|---|---|
| Submitted: | 31 Mar 2005 16:39 | Modified: | 18 May 2005 18:09 |
| Reporter: | Marcos Araujo | ||
| Status: | Closed | ||
| Category: | Server: InnoDB | Severity: | S1 (Critical) |
| Version: | standard 5.0.3 beta | OS: | Linux (Debian Linux - Kernel 2.6.7-1-k7) |
| Assigned to: | Marko Mäkelä | Target Version: | |
[31 Mar 2005 16:39]
Marcos Araujo
[31 Mar 2005 16:59]
Miguel Solorzano
I wasn't able to repeat,most probably testing with the dump file is possible to find the crash.
[31 Mar 2005 17:00]
Jorge del Conde
I wasn't able to get the same results by executing your create table statment:
mysql> CREATE TABLE `CalendarAccess` (
-> `ViewerId` mediumint( 8 ) unsigned NOT NULL default '0',
-> `OwnerId` mediumint( 8 ) unsigned NOT NULL default '0',
-> `AccessType` enum( 'r', 'rw' ) NOT NULL default 'r',
-> `DateCreated` datetime NOT NULL default '0000-00-00 00:00:00',
-> PRIMARY KEY ( `ViewerId` , `OwnerId` ) ,
-> KEY `ViewerId` ( `ViewerId` ) ,
-> KEY `OwnerId` ( `OwnerId` )
-> ) ENGINE = InnoDB
-> ;
Query OK, 0 rows affected (0.00 sec)
mysql>
[1 Apr 2005 9:53]
Heikki Tuuri
Hi!
What is your my.cnf like?
Are you using the UTF-8 charset?
I guess that the following may trigger the assertion failure, because of a newly
discovered bug in storing ENUMs in InnoDB:
`AccessType` enum('r','rw') NOT NULL default 'r',
Maybe Marko should remove the assertion from InnoDB, because it does not work right for
ENUMs currently?
I will fix the ENUM storage soon.
Regards,
Heikki
[1 Apr 2005 18:27]
Marcos Araujo
Yes, I'm using UTF-8.
[1 Apr 2005 18:28]
Marcos Araujo
SQL Dump
Attachment: CRM2_Create_Table.sql (text/x-sql), 70.82 KiB.
[1 Apr 2005 18:29]
Marcos Araujo
I've uploaded the sql dump, so you can test it better. Cheers
[4 Apr 2005 7:23]
Heikki Tuuri
Thank you. Marko will remove the assertion, if necessary, and I will change the internal type of ENUM to an unsigned integer inside InnoDB. I have to check field->real_type() in ha_innodb.cc instead of field->type(). Regards, Heikki
[4 Apr 2005 19:16]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/23628
[4 Apr 2005 19:28]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/23630
[4 Apr 2005 20:17]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/23632
[4 Apr 2005 20:33]
Heikki Tuuri
I have now pushed the fix to 4.1 and 5.0. I will probably not fix 4.0 at all. Regards, Heikki
[5 Apr 2005 15:00]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/23665
[18 May 2005 18:09]
Michael Widenius
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
