ha_innodb.cc:   Fix bug #9526 in InnoDB: the internal type of an ENUM or SET is an unsigned integer type, not a character string